
Thu Aug 3 11:52:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* encrypt_key.c - Actually copy in the salt data which we allocated
		space for in krb5_dbekd_encrypt_key_data().
	* kdb_xdr.c - Correctly generate the tl_data list in krb5_decode_princ_
		contents().  Also allow for key_data_ver to be KRB5_KDB_V1_DATA_
		ARRAY.


Mon Jul 31 15:55:46 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_xdr.c - Correctly parenthesize realloc() expression in create_key
		_data().


Thu Jul 27 15:28:41 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdbint.h - Obsolete.


Thu Jul 27 02:59:05 1995        Chris Provenzano (proven@mit.edu)
        * decrypt_key.c, encrypt_key.c, kdb_dbm.c, kdb_xdr.c:
		Rewritten for new kdb format.
	* kdb_cpw.c : New password changing routines for new kdb format.
	* verify_mky.c, t_kdb.c : Use new kdb format.


Tue Jul 25 14:06:50 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* kdb_dbm.c, t_kdb.c: Add prototype for dbm_error and dbm_clearerr
		in case they're not prototyped in the header files.

	* configure.in: Add test for missing prototypes for dbm_error and
		dbm_clearerr.

Thu Jul 20 23:59:18 1995  Mark Eichin  <eichin@cygnus.com>

	* kdb_dbm.c (krb5_dbm_db_create): move dirname, pagname
	declarations to the top of function, so it compiles...

Mon Jul 17 15:17:53 EDT 1995	Paul Park	(pjpark@mit.edu)
	* fetch_mkey.c - Remove inclusion of kdbint.h and add handling of
		stash file argument.
	* store_mkey.c - Remove inclusion of kdbint.h.  The default name of
		the stash file is in osconf.h now.

Sat Jul  8 22:37:14 1995  Theodore Y. Ts'o  (tytso@dcl)

	* kdb_dbm.c (kdb5_kdbm_db_create): Make sure the dbm context is
		initialized before we start.

Fri Jul 7 16:29:22 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove LDFLAGS, find com_err in TOPLIBD.


Fri Jun 30 14:39:45 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdb_dbm.c - Add function dispatch table to context and use it to
		perform database accesses.  Add kdb5_db_set_dbops() to set